electron/css/dataproofer.css
/*
  General UI
 */
 body {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: system, -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, "Segoe UI", sans-serif;
  font-size: 16px;
  line-height: 1.4;
  color: #333;
  /* background-color: transparent; */
  background-color: #F7F6F5;
  box-sizing: border-box;
 }
.icon-check {
  background-color: #29A03B;
}

.icon-cancel-circled {
  background-color: #D43833;
}

.nav-group-row {
  margin: 5px 10px;
  display: block;
}
#file-loader {
  font-size: 12px;
}

span.reload {
  margin-top: 0px !important;
  font-size: 14px !important;
}
button.reload {
  padding-top: 4px;
  padding-bottom: 0px;
  padding-right: 10px;
}

#info-top-bar {
  padding: 1em;
  padding-top: 32px;
  width: 100%;
  display: block;
  background-color: rgba(255,255,255,0.9);
  position: fixed;
  top: 0;
  z-index: 2;
}

#info-top-bar #current-file-name{
  display: inline-block;
  font-size: 16px;
  border: 0;
  padding: 0.5em;
}


/* =============================================================================
Navigation buttons
============================================================================= */
#nav-buttons {
  float: right;
  margin-right: 2em;
}

#nav-buttons button {
  display: inline-block;
  font-size: 16px;
  border: 0;
  padding: 0.5em;
  margin-bottom: 2px;
  margin-right: 2px;
  color: white;
}

#back-button {
  background-color: #46CC69;
}
#forward-button {
  background-color: #ED4224;

}


/* =============================================================================
Grid
  NOTE: I had to remove box-sizing:border-box from photon.css in order to not mess up slickgrid
============================================================================= */

#grid-wrapper {
  float: right;
  position: relative;
  width: 50%;
}

#grid {
  font-size: 12px;
  box-sizing: content-box !important;
  width: 50%;
  position: fixed;
  right: 0;
  top: 70px;
  bottom: 0;
  background-color: #EEE;
  overflow: hidden;
  display: none;
}

.changed {
  background: pink;
}

.steps {
  /* temp styling
  position: absolute;
  top: 30;
  height: calc(100% - 230px); */
  padding: 1.5em;
  padding-top: 70px;
}
.step {
  float:left;
  clear:left;
  width: 100%;
  overflow-y: scroll;
  /*margin-bottom: 200px;*/

}

/* =============================================================================
STEP  1
============================================================================= */
.step-1-data {

}

.step-1-data #file-loader {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

.step-1-data #file-loader-button {
  display: block;
  text-align: center;
  background-color: #46CC69;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  color: white;
  font-size: 24px;
  padding: 1em;
}

#spreadsheet-input {
  width: 80%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: auto;
  font-size: 24px;
  padding: 1em;
}

#spreadsheet-input::-webkit-input-placeholder {
  text-align: center;
}
#spreadsheet-button {
  width: 25%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: auto;
  font-size: 24px;
  margin-top: 5px;
  padding: 1em;
  background-color: #46CC69;
  color: white;
  border: 0;

}

#gsheets-response {
  width: 80%;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  font-size: 20px;
  color: #a23
}

/* =============================================================================
STEP  2
============================================================================= */
.step-2-select {
  padding: 5px;
  width: 100%;
  /*opacity: 0.2; */
  display: none;
  margin-bottom: 200px;
}
.step-2-select .suite {
  opacity: 0.2;
}
.step-2-select .suite.active {
  opacity: 1;
}

button.run-tests {
  /*
  font-size: 1.8em;
  padding: 1em;
  width: 100%;
  display: block;
  text-align: center;
  */
  display: block;
  text-align: center;
  background-color: #ED4224;
  border: 0;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 48px;
  color: white;
  font-size: 24px;
  padding: 1em;
}

/* =============================================================================
STEP  3
============================================================================= */
.step-3-results {
  width: 50%;
  display: none;
}

.handsontable td:hover {
  background-color: aliceblue;
}

/* =============================================================================
General Suites and test
============================================================================= */
.suite {
  border-top: 2px solid #CCC;
  margin: 0.5em 0;
}

.suite-hed * {
  display: inline-block;
  text-decoration: underline;
}

.suite-hed input.toggle+label {
  left: 1em;
}

.suite input.toggle {
  position: absolute;
  margin-left: -9999px;
  visibility: hidden
}

.suite input.toggle+label {
  padding: 2px;
  width: 60px;
  height: 30px;
  top: 0.7em;
  background-color: #bebebe;
  -webkit-border-radius: 30px;
  border-radius: 30px;
  display: inline-block;
  position: relative;
  cursor: pointer;
  outline: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none
}

.test input.toggle+label {
  width: 36px;
  height: 18px;
}

.suite input.toggle+label:after,
.suite input.toggle+label:before {
  display: block;
  position: absolute;
  top: 1px;
  left: 1px;
  bottom: 1px;
  content: ""
}

.suite input.toggle+label:before {
  right: 1px;
  background-color: #d7d7d7;
  -webkit-border-radius: 30px;
  border-radius: 30px;
  -webkit-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -moz-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -o-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -ms-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  transition: all .2s cubic-bezier(.4, 0, .2, 1)
}

.suite input.toggle+label:after {
  width: 32px;
  background-color: #fff;
  -webkit-border-radius: 100%;
  border-radius: 100%;
  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
  box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
  -webkit-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -moz-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -o-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  -ms-transition: all .2s cubic-bezier(.4, 0, .2, 1);
  transition: all .2s cubic-bezier(.4, 0, .2, 1)
}

.test input.toggle+label:after {
  width: 20px;
}

.suite input.toggle:checked+label:before {
  background-color: #08ab88;
}

.suite input.toggle:checked+label {
  background-color: #067a61;
}

.suite input.toggle:checked+label:after {
  margin-left: 30px;
}

.test input.toggle:checked+label:after {
  margin-left: 18px;
}

.suite input.toggle.disabled+label {
    cursor: not-allowed;
    opacity: .25;
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
    filter: alpha(opacity=25);
    -webkit-box-shadow: none;
    box-shadow: none
}

.suite .test {
  /*
  min-width: 100px;
  max-width: 100%;
  */
  margin: 4px;
  padding: 1em;
  margin-top: 1em;
  width: 20%;
  /*min-width: 225px; */
  min-height: 200px;
  /*max-height: 400px;*/
  /*overflow-y: auto;*/
  display: inline-block;
  vertical-align: top;
  background-color: white;
  border: 1px solid transparent;
  border-radius: 3px;
  opacity: 0.2;
  position: relative;
}

.suite .test .onoff {
  
}

.suite .test.active {
  border: 1px solid black;
  opacity: 1;
}

/*
.suite .test:nth-child(odd) {
  background-color: #efefef;
}
*/

.suite .test .passfail div{
  width: 20px;
  height: 20px;
  border-radius: 50%;
  float:left;
  margin-right: 7px;
}

.suite .test .message {
  font-size: 14px;
  /*float:left;*/
  /*width: calc(100% - 245px);*/
}

.suite .test .test-header {
  font-size: 14px;
  font-weight: bold;
}
.suite .test .test-column {
  font-size: 12px;
  font-weight: bold;
  font-style: italic;
}
.suite .test .test-value {
  font-weight: bold;
  font-family; Courier;
}

.suite .test .fingerprint {
  width: 200px;
  float: right;
  margin-right: 25px;
  cursor: pointer;
}



/* =============================================================================
HEADER
Header styles stolen from photon.css
============================================================================= */
.toolbar-header {
  z-index: 100;
  border-bottom: 1px solid #c2c0c2;
  background-color: #222;
  color: #fff;
  margin: 0;
  padding: 2px;
}
.toolbar-header .title {
  margin-top: 1px;
}

.toolbar-footer {
  border-top: 1px solid #c2c0c2;
  -webkit-app-region: drag;
}

.toolbar-header .title {
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  text-align: center;
  cursor: default;
}

.toolbar-borderless {
  border-top: 0;
  border-bottom: 0;
}

